--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.simmgames.dialoguesystem": "https://github.com/SimmGames/com.simmgames.dialoguesystem.git",
+    "com.unity.cinemachine": "2.6.11",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
